--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <ol>
     <li><a href="./example/helloworld.html">Hello word 实例</a> </li>
     <li><a href="./example/v-if.html">v-if&v-else&v-show 实例</a> </li>
+    <li><a href="./example/v-for.html">v-for 实例</a> </li>
+    <li><a href="./example/v-text.html">v-text&v-html 实例</a> </li>
 </ol>
 </body>
 </html>
