--- a/example/v-on.html
+++ b/example/v-on.html
@@ -11,7 +11,9 @@
     <div id="app">
         本场比赛得分：{{fenshu}}
         <p>
-            <button v-on:click="fenshu">加分</button>
+            <button v-on:click="jiafen">加分</button>
+            <button @click="jianfen">减分</button>
+            <input type="text" v-on:keyup.enter="onEnter" v-model="fenshu2">
 
         </p>
     </div>
@@ -22,7 +24,19 @@
     var app = new Vue({
         el: '#app',
         data: {
-            fenshu:0
+            fenshu:0,
+            fenshu2:1
+        },
+        methods:{
+            jiafen:function () {
+                this.fenshu++;
+            },
+            jianfen:function () {
+                this.fenshu--;
+            },
+            onEnter:function(){
+                this.fenshu = this.fenshu + parseInt(this.fenshu2)
+            }
         }
     })
 </script>
