--- a/example/v-model.html
+++ b/example/v-model.html
@@ -11,24 +11,42 @@
     <p>原始文本信息: {{message}}ahahah</p><br>
     <h3>文本框</h3>
     <p>v-model<input type="text" v-model="message"></p>
-    <p>v-model.lazy<input type="text" v-model.lazy="message"></p>
-    <p>v-model.number<input type="text" v-model.number="message"></p>
-    <p>v-model.trim<input type="text" v-model.trim="message"></p>
+    <p>v-model.lazy<input type="text" v-model.lazy="message"></p><!--离开焦点才会跟新-->
+    <p>v-model.number<input type="text" v-model.number="message"></p><!--省略数字后字符-->
+    <p>v-model.trim<input type="text" v-model.trim="message"></p><!--取消前后空格-->
+
     <hr>
+
     <h3>文本域</h3>
     <textarea cols="30" rows="10" v-model="message"></textarea>
     <hr>
     <h3>多选框绑定一个值</h3>
     <input type="checkbox" id="isTrue" v-model="inTrue">
     <label for="isTrue">{{inTrue}}</label>
+
     <hr>
+
+    <h3>多选框绑定数组</h3>
     <input type="checkbox" id="jspang" value="jspang" v-model="web_names">
-    <label for="isTrue">jspang</label>
+    <label for="jspang">jspang</label>
     <input type="checkbox" id="panda" value="panda" v-model="web_names">
     <label for="isTrue">panda</label>
     <input type="checkbox" id="panpan" value="panpan" v-model="web_names">
     <label for="isTrue">panpan</label>
     <p>{{web_names}}</p>
+
+    <hr>
+
+    <h3>单选框绑定</h3>
+    <p>
+        <input type="radio" id="nan" value="男" v-model="sex">
+        <label for="nan">男</label>
+        <input type="radio" id="nv" value="女" v-model="sex">
+        <label for="nv">女</label>
+        <input type="radio" id="nv1" value="en" v-model="sex">
+        <label for="nv">qita</label>
+        <p>你选择的性别是：{{sex}}</p>
+    </p>
 </div>
 
 
@@ -40,7 +58,8 @@
         data:{
             message:'hello world1116661',
             inTrue:true,
-            web_names:[]
+            web_names:[],
+            sex:'男'
         }
     })
 
