--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="./example/v-text.html">v-text&v-html 实例</a> </li>
     <li><a href="./example/v-on.html">v-on 实例</a> </li>
     <li><a href="./example/v-model.html">v-model数据源绑定实例</a> </li>
+    <li><a href="./example/v-bind.html">v-bind实例</a> </li>
 </ol>
 </body>
 </html>
