--- a/example/try.html
+++ b/example/try.html
@@ -43,6 +43,26 @@
         <td><label for="address">住址：</label></td>
         <td><input type="text" name="address" id="address"></td>
     </tr>
+
+
+  <input type="checkbox" value="true">
+
+    <form>
+        你爱好的运动是？<br/>
+        <input type="checkbox" name="items" value="足球" />足eee球
+        <input type="checkbox" name="items" value="篮球" />篮eee球
+        <input type="checkbox" name="items" value="羽毛球" />羽e毛球
+        <input type="checkbox" name="items" value="乒乓球" />乒乓ee球 <br/>
+        <input type="button" id="CheckAll" value="全选" />
+        <input type="button" id="CheckNo" value="全不选" />
+        <input type="button" id="CheckRev" value="反选" />
+    </form>
+
+
+    <input type="checkbox" id="isTrue" name="true">
+    <script>
+
+    </script>
 </table>
 </body>
 </html>
