--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <li><a href="./example/v-on.html">v-on 实例</a> </li>
     <li><a href="./example/v-model.html">v-model数据源绑定实例</a> </li>
     <li><a href="./example/v-bind.html">v-bind实例</a> </li>
+    <li><a href="./example/vue.directive.html">vue.directive</a> </li>
+    <li><a href="./example/vue.extend.html">vue.extend 扩展实例构造器</a> </li>
+    <li><a href="./example/vue.set.html">vue.set 全局操作</a> </li>
 </ol>
 </body>
 </html>
