--- a/example/try.html
+++ b/example/try.html
@@ -36,7 +36,7 @@
         </td>
     </tr>
     <tr>
-        <td><label for="email">邮箱：<label></td>
+        <td><label for="email">邮箱：</label></td>
         <td><input type="text" name="email" id="email"></td>
     </tr>
     <tr>
