--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="./example/vue.directive.html">vue.directive</a> </li>
     <li><a href="./example/vue.extend.html">vue.extend 扩展实例构造器</a> </li>
     <li><a href="./example/vue.set.html">vue.set 全局操作</a> </li>
+    <li><a href="./example/smzq.html">vue的声明周期</a> </li>
 </ol>
 </body>
 </html>
