--- a/example/smzq.html
+++ b/example/smzq.html
@@ -1,40 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>vue的生命周期
-    </title>
+    <title>vue的生命周期</title>
 </head>
+
 <body>
-<h1>vue的声明周期</h1>
-<hr>
-<div id="app">
-    {{count}}
-</div>
-<button onclick="add()">add</button>
+    <h1>vue的声明周期</h1>
+    <hr>
+    <div id="app">
+        {{count}}
+        <br><button @click="add()">add</button>
+    </div>
+    <button onclick="app.$destroy()">销毁</button>
 
 
 
-<script src="../assets/js/vue.js"></script>
-<script>
+    <script src="../assets/js/vue.js"></script>
+    <script>
 
-    function add(){
-        vue.count++;
-    };
-    
-    var app = new Vue({
-        el:'#app',
-        data:{
-            count:1
-        }
-    })
+        var app = new Vue({
+            el: '#app',
+            data: {
+                count: 1
+            },
+            methods: {
+                add: function () {
+                    this.count++;
+                }
+            },
+            beforeCreate: function () {
+                console.log('1-beforeCreate 初始化之前');
+            },
+            created: function () {
+                console.log('2-created 创建完成');
+            },
+            beforeMount: function () {
+                console.log('3-beforeMount 挂载之前');
+            },
+            mounted: function () {
+                console.log('4-mounted 被挂载之后');
+            },
+            beforeUpdate: function () {
+                console.log('5-beforeUpdate 数据更新前');
+            },
+            updated: function () {
+                console.log('6-updated 被更新后');
+            },
+            // activated: function () {
+            //     console.log('7-activated');
+            // },
+            // deactivated: function () {
+            //     console.log('8-deactivated');
+            // },
+            beforeDestroy: function () {
+                console.log('9-beforeDestroy 销毁之前');
+            },
+            destroyed: function () {
+                console.log('10-destroyed 销毁之后')
+            },
 
-
-</script>
+        });
+    </script>
 
 
 
 
 
 </body>
+
 </html>
