--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
     <li><a href="./example/vue.extend.html">vue.extend 扩展实例构造器</a> </li>
     <li><a href="./example/vue.set.html">vue.set 全局操作</a> </li>
     <li><a href="./example/smzq.html">vue的声明周期</a> </li>
+    <li><a href="./example/template.html">template模板</a> </li>
+    <li><a href="./example/component-1.html">component-1</a> </li>
+    <li><a href="./example/component-2.html">component-2</a> </li>
+    <li><a href="./example/component-3.html">component-3</a> </li>
+    <li><a href="./example/component-4.html">component-4</a> </li>
+    <li><a href="./example/propsData.html">propsData Opention</a> </li>
+    <li><a href="./example/computed.html">computed Opention</a> </li>
+    <li><a href="./example/methods.html">methods</a> </li>
+    <li><a href="./example/watch.html">wathch</a> </li>
+    <li><a href="./example/mixins.html">mixins</a> </li>
+    <li><a href="./example/extends.html">extends</a> </li>
+    <li><a href="./example/example.html">example</a> </li>
 </ol>
 </body>
 </html>
